src/test/deca/context/valid/inheritance/polymorphic_var_base_ref_child.deca
// Description :
//    Variable de type classe de base référant un objet de sous-classe.
//
// Resultats :
//    OK

class A {
    int f() {
        return 1;
    }
}

class B extends A {
    int f() {
        return 2;
    }
}

{
    A a = new B();
    println(a.f());
}

