src/test/deca/context/invalid/fields/protected_field_access_wrong_object_type.deca
// Description :
//    Accès à un champ protected via un objet dont le type n'est pas un sous-type.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
protected int x;
}

class B extends A {
    int f(A a) {
        return a.x;
    }
}

{
}

